Converted to lemma-based learning.